--- a/WebContent/delete2.html
+++ b/WebContent/delete2.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript">
-	alert('게시판 글쓰기 페이지입니다. 반갑습니다!')
+	//alert('게시판 글쓰기 페이지입니다. 반갑습니다!')
 </script>
 <style type="text/css">
 body { /*컨트롤 + / >> 자동주석, 태그선택*/
@@ -31,6 +31,11 @@ button {
 </style>
 </head>
 <body>
+<h3>게시판 글삭제 페이지</h3>
+	<hr>
+	<a href="bbs.html">
+		<button id="b1">첫페이지로</button>
+	</a>
 <form action="delete2.jsp">
 <table border="1">
 			<tr>
