--- a/one.html
+++ b/one.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript">
+	//alert('게시판 글쓰기 페이지입니다. 반갑습니다!')
 </script>
 <style type="text/css">
 body { /*컨트롤 + / >> 자동주석, 태그선택*/
@@ -30,19 +31,26 @@ button {
 </style>
 </head>
 <body>
-<form action="delete.jsp">
-<table border="1">
+	<h3>게시판 검색 페이지</h3>
+	<hr>
+	<a href="bbs.html">
+		<button id="b1">첫페이지로</button>
+	</a>
+	<hr color="red">
+	<hr color="orange">
+	<form action="one.jsp" method="get">
+		<table border="1">
 			<tr>
-				<td class="t1">탈퇴할  id :</td>
+				<td class="t1">검색할 id :</td>
 				<td><input name="id"></td>
 			</tr>
 			<tr>
 				<td colspan="2" class="t1">
-					<button id="b2">탈퇴할 id 데이터 전송</button>
+					<button id="b2">게시판 검색할 id 데이터 전송</button>
 				</td>
 			</tr>
 		</table>
 
-</form>
+	</form>
 </body>
 </html>
