--- a/insert4.html
+++ b/insert4.html
@@ -3,16 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<script type="text/javascript">
-	//	alert('게시판 글쓰기 페이지입니다. 반갑습니다!')
-</script>
 <style type="text/css">
-body { /*컨트롤 + / >> 자동주석, 태그선택*/
-	background: #ffdcd6
+body { /* 컨트롤 + / - 자동주석, 태그선택! */
+	background: #037BFC;
 }
 
 button {
-	background: #f5a040
+	background: #18DE02;
 }
 
 .t1 { /* .은 클래스 선택!, 여러개선택!  */
@@ -31,33 +28,40 @@ button {
 </style>
 </head>
 <body>
-	<h3>게시판 글쓰기 페이지</h3>
+	<!-- no, title, content, writer 게시판글쓰기  -->
+	<h3>상품 등록 페이지</h3>
 	<hr>
-	<a href="bbs.html">
+	<a href="movie.html">
 		<button id="b1">첫페이지로</button>
 	</a>
-	<form action="insert2.jsp">
+	<form action="insert4.jsp">
 		<table border="1">
 			<tr>
-				<td class="t1">제목 :</td>
+				<td class="t1">id :</td>
+				<td><input name="id"></td>
+			</tr>
+			<tr>
+				<td class="t1">title :</td>
 				<td><input name="title"></td>
 			</tr>
 			<tr>
-				<td class="t1">내용 :</td>
+				<td class="t1">content :</td>
 				<td><input name="content"></td>
 			</tr>
 			<tr>
-				<td class="t1">작성자 :</td>
-				<td><input name="writer"></td>
+				<td class="t1">location :</td>
+				<td><input name="location"></td>
+			</tr>
+			<tr>
+				<td class="t1">director :</td>
+				<td><input name="director"></td>
 			</tr>
 			<tr>
 				<td colspan="2" class="t1">
-					<button id="b2">게시글 데이터 전송</button>
+					<button id="b2">상품 등록 데이터 전송</button>
 				</td>
 			</tr>
 		</table>
-		<!-- 입력한 값들이 서버(톰캣)으로 전달 될 때는 form 안에 있어야 함 -->
-		<!-- 보충내용 : <input name="data"> -->
 	</form>
 </body>
 </html>
