--- a/one2.html
+++ b/one2.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript">
-	//	alert('게시판 글쓰기 페이지입니다. 반갑습니다!')
+	//alert('게시판 글쓰기 페이지입니다. 반갑습니다!')
 </script>
 <style type="text/css">
 body { /*컨트롤 + / >> 자동주석, 태그선택*/
@@ -31,33 +31,36 @@ button {
 </style>
 </head>
 <body>
-	<h3>게시판 글쓰기 페이지</h3>
+	<h3>게시판 검색 페이지</h3>
 	<hr>
 	<a href="bbs.html">
 		<button id="b1">첫페이지로</button>
 	</a>
-	<form action="insert2.jsp">
+	<hr color="red">
+	<!-- a태그는 무조건 get방식 요청 -->
+	<a href="http://localhost:8888/web00/one2.jsp?no=1">
+		<button style="background: pink">1번 게시물</button>
+	</a>
+	<a href="http://localhost:8888/web00/one2.jsp?no=2">
+		<button style="background: pink">2번 게시물</button>
+	</a>
+	<a href="http://localhost:8888/web00/one2.jsp?no=3">
+		<button style="background: pink">3번 게시물</button>
+	</a>
+	<hr color="orange">
+	<form action="one2.jsp" method="get">
 		<table border="1">
 			<tr>
-				<td class="t1">제목 :</td>
-				<td><input name="title"></td>
-			</tr>
-			<tr>
-				<td class="t1">내용 :</td>
-				<td><input name="content"></td>
-			</tr>
-			<tr>
-				<td class="t1">작성자 :</td>
-				<td><input name="writer"></td>
+				<td class="t1">검색할 번호 :</td>
+				<td><input name="no"></td>
 			</tr>
 			<tr>
 				<td colspan="2" class="t1">
-					<button id="b2">게시글 데이터 전송</button>
+					<button id="b2">게시판 검색할 no 데이터 전송</button>
 				</td>
 			</tr>
 		</table>
-		<!-- 입력한 값들이 서버(톰캣)으로 전달 될 때는 form 안에 있어야 함 -->
-		<!-- 보충내용 : <input name="data"> -->
+
 	</form>
 </body>
 </html>
