--- a/WebContent/index2.html
+++ b/WebContent/index2.html
@@ -6,11 +6,11 @@
 <link rel="stylesheet" type="text/css" href="css/out.css">
 <style type="text/css">
 *{
-	color : orange; /* 모든 글자색은 파랑색으로 설정함 */
+	color : blue; /* 모든 글자색은 파랑색으로 설정함 */
 }
 </style>
 <script type="text/javascript">
-	alert('나는 왕자이다!')
+	alert('나는 왕이다!')
 //주석
 /*
   여러줄 주석
@@ -18,6 +18,6 @@
 </script>
 </head>
 <body>
-나는 공주이다!
+나는 퀸이다!
 </body>
 </html>
